--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   
   <hr>
   
+  <h3>Sites:</h3>
+  
   <a href = "http://2ger.net/dishonest-uakari">dishonest-uakari</a>
   <br>
   <a href = "http://2ger.net/example">example</a>
@@ -19,4 +21,9 @@
   <a href = "http://2ger.net/porcupinepunch">porcupinepunch</a>
   <br>
   <a href = "http://2ger.net/sdlonglines">sdlonglines</a>
+  
+  <hr>
+  
+  <p>Copyright 2020-2022 Aiden Moechnig</p>
+  
 </html>
