--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <hr>
   
-  <h3>Sites:</h3>
+  <h3>Hosted Pages</h3>
   
   <a href = "http://2ger.net/dishonest-uakari">dishonest-uakari</a>
   <br>
