--- a/porcupinepunch/index.html
+++ b/porcupinepunch/index.html
@@ -21,4 +21,6 @@ function openMenu() {  var navMain = document.getElementById('navMenuId');  if (
 
   <p><b>Keaton - KFØCCH</b><br>Website Created March 16th, 2021<br>Page Lasted Updated March 17th, 2021<br><br>You can contact me <a href="mailto:porcupinepunch@gmail.com">here</a> about comments or questions related to this site.
   	</center>
+<b> ANNOUNCEMENT...   I now have direct access to the 2ger file server, </b>
+<b> so I should now be more motivated to actually update this website. :D <b/>
 <p>Please also note that this website is still a work in progress.</p>
