--- a/pcashn/index.html
+++ b/pcashn/index.html
@@ -1,9 +1,10 @@
 <html>
+	<title>503 Error</title>
 
-	<h1>503 Service Unavailable</h1>
+		<h1>503 Service Unavailable</h1>
 
-	<hr>
+		<hr>
 
-	<p>There is no web content attached to this domain.</p>
+		<p>There is no web content attached to this domain.</p>
 
 </html>
