--- a/martinluther/index.html
+++ b/martinluther/index.html
@@ -164,8 +164,8 @@ Where God builds a church, the devil builds a chapel.<br>
 </div>
 
 <hr>
-
-<p>Copyright 2021 Aiden Moechnig and 2ger Info</p>
+	
+	<p>Copyright 2021 <a href="mailto:atmoechnig@gmail.com">Aiden Moechnig</a></p>
 
 <html>
   
