--- a/hamsearch/index.html
+++ b/hamsearch/index.html
@@ -505,6 +505,14 @@
   <li><a href="http://www.oldqslcards.com/" target="_blank">QSL Cards From the Past</a> - add W1XH</li>  
   <li><a href="http://www.echolink.org" target="_blank">Introducing EchoLink</a></li>
   <li><a href="http://sdlink.org" target="_blank">SDLINK | "Connecting South Dakota's Radio Amateurs"</a></li>
+   <a href="http://www.hwn.org/">Hurricane Watch Net Home Page</a></font></p>
+<li><a href="http://lafayetteohsep.org/Pages/default.aspx">Lafayette Parish Office of Homeland Security and Emergency Preparedness (OHSEP)</a></li>	
+<li><a href="http://www.ucs.louisiana.edu/~sjm8725/mahler/skywarn/">Lafayette SkyWarn Group Home Page</a></li>
+<li><a href="http://w5ddl.org/skywarn/Basic%20Spotter%20Guide.pdf">SkyWarn Basic Spotters' Field Guide</a></li>
+<li><a href="http://w5ddl.org/skywarn/Advanced%20Spotter%20Guide.pdf">SkyWarn Advanced Spotters' Field Guide</a></li>
+<li><a href="http://w5ddl.org/skywarn/Lafayette%20Skywarn%20Spotters%20Guide.pdf">Lafayette SkyWarn Spotter's Guide</a></li>
+<li><a href="http://kizzy03.wixsite.com/kf5vh">Lafayette&nbsp;537 Repeater ALLSTAR / SKYWARN REPEATER for Lafayette Parish</a></li>
+<li><a href="http://eds-satern.sawmni.org/">Salvation Army Team Emergency Radio Network (SATERN)</a></li>
 </ul>
 
 
