--- a/hamsearch/index.html
+++ b/hamsearch/index.html
@@ -513,6 +513,7 @@
   <li><a href="http://w5ddl.org/skywarn/Lafayette%20Skywarn%20Spotters%20Guide.pdf">Lafayette SkyWarn Spotter's Guide</a></li>
   <li><a href="http://kizzy03.wixsite.com/kf5vh">Lafayette&nbsp;537 Repeater ALLSTAR / SKYWARN REPEATER for Lafayette Parish</a></li>
   <li><a href="http://eds-satern.sawmni.org/">Salvation Army Team Emergency Radio Network (SATERN)</a></li>
+  <li><a href="https://sdr.womod.org/">W0MOD Toronto, South Dakota WebSDR</a> 
 </ul>
 
 
