--- a/hamsearch/index.html
+++ b/hamsearch/index.html
@@ -12,6 +12,7 @@
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search.." title="Search">
 
 <ul id="myUL">
+      <li><a href="http://websdr.org/">websdr.org WebSDR List</a>
       <li><a href="https://qrz.com/">QRZ Callsign Database</a>
       <li><a href="https://emissary.ai/telegraph-morse-code-text/" target="_blank">All About the Telegraph and Deciphering Morse Code Text</a></li> 
       <li><a href="http://www.pryme.com/" target="_blank">ADI / Pryme</a></li>
