--- a/hamsearch/index.html
+++ b/hamsearch/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Hamsearch - Search the internet world of amateur radio</title>
 
 </head>
 <body>
