--- a/sdlonglines/index.html
+++ b/sdlonglines/index.html
@@ -49,7 +49,7 @@
 		        <tr>
 				<td>Chester Tower</td>
 				<td>Chester</td>
-				<td>Unknown</td>
+				<td>KBI46</td>
 				<td>May 15, 2021</td>
 				<td><a href="/sdlonglines/towerimages/chtower.jpg">Image</a></td>
 		        </tr>
