--- a/sdlonglines/index.html
+++ b/sdlonglines/index.html
@@ -42,7 +42,7 @@
 			<tr>
 				<td>Watertown Tower</td>
 				<td>Watertown</td>
-				<td>Unknown</td>
+				<td>KBI48</td>
 				<td>June 17, 2020</td>
 				<td><a href="/sdlonglines/towerimages/wttower.jpg">Image</a></td>
 		        </tr>
