--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
-  <img src = "laptop_infrared_2-4">
+  <img src = "laptop_infrared_2-4.png">
   <h1>2ger.net</h1>
   
+  <hr>
+  
+  <p><a
+     
   <hr>
   
   <h3>Hosted Pages</h3>
