--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <h3>Subdomains</h3>
   
-  <a href = "http://porcupinepunch.2ger.net">porcupinepunch.2ger.net</a> <p style="color:red"> The porcupinepunch.2ger.net webserver is currently down for service. </p>
+  <a href = "http://porcupinepunch.2ger.net">porcupinepunch.2ger.net<p style="color:red"> The porcupinepunch.2ger.net webserver is currently down for service. </p></a>
   
   <hr>
   
